--- a/css/style.css
+++ b/css/style.css
@@ -1282,7 +1282,7 @@ li {
 
 .column {
   width: 150px;
-  height: 142px;
+  height: 147px;
   background: rgba(28, 39, 82, 1);
 }
 
@@ -2047,8 +2047,8 @@ li {
     letter-spacing: 0.36000001430511475px;
     text-align: left;
     color: rgba(28, 39, 82, 1);
-    margin-left: 10px;
-    width: 130px;
+    margin-left: 14px;
+    width: 150px;
   }
 }
 
@@ -2147,7 +2147,7 @@ li {
   letter-spacing: 0.3199999928474426px;
   text-align: left;
   color: rgba(126, 126, 126, 1);
-  margin-bottom: 10px
+  /* margin-bottom: 10px; */
 }
 
 @media only screen and (min-width: 1100px) {
@@ -2208,7 +2208,7 @@ li {
     text-align: left;
     color: rgba(28, 39, 82, 1);
     margin-top: -1px;
-    margin-right: 25px;
+    margin-right: 23px;
   }
 }
 
@@ -2328,9 +2328,8 @@ li {
 @media only screen and (max-width: 481px) {
   .btn-vip {
     font-family: 'Inter';
-    font-size: 6px;
+    font-size: 5px;
     font-weight: 400;
-    letter-spacing: 0.36000001430511475px;
     text-align: center;
     color: rgba(28, 39, 82, 1);
     width: 56px;
