--- a/css/style.css
+++ b/css/style.css
@@ -2490,63 +2490,129 @@ li {
 
 .section-qir {
   background: rgba(255, 179, 66, 1);
-  height: 320px;
+  height: 225px;
   display: flex;
 }
 
+/* @media only screen and (max-width: 481px) {
+  .text-qir {
+    width: 470px;
+    height: 200px;
+    /* margin-top: 70px;
+    margin-left: 100px; */
 
-.text-qir {
-  width: 470px;
-  height: 200px;
-  margin-top: 70px;
-  margin-left: 100px;
+
+@media only screen and (min-width: 1100px) {
+  .text-qir {
+    width: 470px;
+    height: 200px;
+    margin-top: 70px;
+    margin-left: 100px;
+  }
 }
 
 .text-rossilka {
   font-family: 'Mulish';
-  font-size: 32px;
+  font-size: 20px;
   font-weight: 400;
-  line-height: 45px;
+  line-height: 26px;
   letter-spacing: 0.36000001430511475px;
   text-align: left;
   color: rgba(28, 39, 82, 1);
+  margin-left: 25px;
+  width: 276px;
+  margin-top: 35px;
+}
+
+
+@media only screen and (min-width: 1100px) {
+  .text-rossilka {
+    font-family: 'Mulish';
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 45px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(28, 39, 82, 1);
+  }
 }
 
 .prg-rossilka {
   font-family: 'Inter';
-  font-size: 17px;
+  font-size: 10px;
   font-weight: 400;
-  line-height: 27px;
-  letter-spacing: 0.36000001430511475px;
+  line-height: 15px;
   text-align: left;
   color: rgba(28, 39, 82, 1);
+  margin-top: -10px;
+  margin-left: 25px;
+  width: 300px;
+}
 
-  margin-top: -19px;
+@media only screen and (min-width: 1100px) {
+  .prg-rossilka {
+    font-family: 'Inter';
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(28, 39, 82, 1);
+    margin-top: -19px;
+  }
 }
 
 
 .email-block {
-  margin-top: 145px;
-  margin-left: 100px;
+  margin-top: 140px;
+  margin-left: -300px;
 
+}
+
+@media only screen and (min-width: 1100px) {
+  .email-block {
+    margin-top: 145px;
+    margin-left: 100px;
+
+  }
 }
 
 .subsraib {
   font-family: 'Inter';
-  font-size: 17px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 27px;
   letter-spacing: 0.36000001430511475px;
   text-align: center;
   color: rgba(28, 39, 82, 1);
 
-  width: 170px;
-  height: 54px;
+  width: 100px;
+  height: 37px;
   border-radius: 2px;
   background: rgba(255, 255, 255, 1);
   border: 1px solid rgba(255, 255, 255, 1);
   cursor: pointer;
   transition: transform 0.3s;
+}
+
+@media only screen and (min-width: 1100px) {
+  .subsraib {
+    font-family: 'Inter';
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+
+    width: 170px;
+    height: 54px;
+    border-radius: 2px;
+    background: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(255, 255, 255, 1);
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
 }
 
 .subsraib:focus,
@@ -2557,12 +2623,24 @@ li {
 
 .labelli {
   font-family: 'Inter';
-  font-size: 17px;
+  font-size: 12px;
   font-weight: 400;
-  line-height: 27px;
+  /* line-height: 27px; */
   letter-spacing: 0.36000001430511475px;
   text-align: left;
   color: rgba(255, 255, 255, 1);
+}
+
+@media only screen and (min-width: 1100px) {
+  .labelli {
+    font-family: 'Inter';
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+  }
 }
 
 .form-labil {
@@ -2581,12 +2659,24 @@ li {
 }
 
 .input-container input {
-  width: 300px;
+  width: 190px;
   background-color: rgba(255, 179, 66, 1);
   outline: none;
-  font-size: 17px;
+  font-size: 11px;
   background-color: transparent;
   color: #333;
+  height: 34px;
+}
+
+@media only screen and (min-width: 1100px) {
+  .input-container input {
+    width: 300px;
+    background-color: rgba(255, 179, 66, 1);
+    outline: none;
+    font-size: 17px;
+    background-color: transparent;
+    color: #333;
+  }
 }
 
 .input-container label {
