--- a/css/style.css
+++ b/css/style.css
@@ -1876,7 +1876,7 @@ li {
   display: flex;
   flex-direction: column;
   width: 100px;
-  height: 140px;
+  height: 145px;
   border-radius: 1px;
   background: linear-gradient(0deg, #FFFFFF, #FFFFFF);
   border: 1px solid rgba(210, 210, 210, 1);
@@ -2281,7 +2281,7 @@ li {
   .block-vip {
     display: flex;
     align-items: center;
-    margin-left: 35px;
+    margin-left: 20px;
     height: 40px;
   }
 }
@@ -2499,30 +2499,33 @@ li {
   .text-qir {
     width: 470px;
     height: 200px;
-    /* margin-top: 70px;
-    margin-left: 100px; */
-
+   margin-top: 70px;
+    margin-left: 100px; 
+  }
+} */
 
 @media only screen and (min-width: 1100px) {
   .text-qir {
     width: 470px;
     height: 200px;
-    margin-top: 70px;
+    margin-top: 30px;
     margin-left: 100px;
   }
 }
 
-.text-rossilka {
-  font-family: 'Mulish';
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 26px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: left;
-  color: rgba(28, 39, 82, 1);
-  margin-left: 25px;
-  width: 276px;
-  margin-top: 35px;
+@media only screen and (max-width: 481px) {
+  .text-rossilka {
+    font-family: 'Mulish';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(28, 39, 82, 1);
+    margin-left: 25px;
+    width: 276px;
+    margin-top: 35px;
+  }
 }
 
 
@@ -2538,16 +2541,18 @@ li {
   }
 }
 
-.prg-rossilka {
-  font-family: 'Inter';
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 15px;
-  text-align: left;
-  color: rgba(28, 39, 82, 1);
-  margin-top: -10px;
-  margin-left: 25px;
-  width: 300px;
+@media only screen and (max-width: 481px) {
+  .prg-rossilka {
+    font-family: 'Inter';
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 15px;
+    text-align: left;
+    color: rgba(28, 39, 82, 1);
+    margin-top: -10px;
+    margin-left: 25px;
+    width: 300px;
+  }
 }
 
 @media only screen and (min-width: 1100px) {
@@ -2563,37 +2568,40 @@ li {
   }
 }
 
+@media only screen and (max-width: 481px) {
+  .email-block {
+    margin-top: 160px;
+    margin-left: -300px;
 
-.email-block {
-  margin-top: 160px;
-  margin-left: -300px;
-
+  }
 }
 
 @media only screen and (min-width: 1100px) {
   .email-block {
-    margin-top: 145px;
+    margin-top: 135px;
     margin-left: 100px;
 
   }
 }
 
-.subsraib {
-  font-family: 'Inter';
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 27px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: center;
-  color: rgba(28, 39, 82, 1);
+@media only screen and (max-width: 481px) {
+  .subsraib {
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
 
-  width: 100px;
-  height: 37px;
-  border-radius: 2px;
-  background: rgba(255, 255, 255, 1);
-  border: 1px solid rgba(255, 255, 255, 1);
-  cursor: pointer;
-  transition: transform 0.3s;
+    width: 100px;
+    height: 37px;
+    border-radius: 2px;
+    background: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(255, 255, 255, 1);
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
 }
 
 @media only screen and (min-width: 1100px) {
@@ -2621,15 +2629,16 @@ li {
   transform: scale(1.1);
 }
 
-
-.labelli {
-  font-family: 'Inter';
-  font-size: 12px;
-  font-weight: 400;
-  /* line-height: 27px; */
-  letter-spacing: 0.36000001430511475px;
-  text-align: left;
-  color: rgba(255, 255, 255, 1);
+@media only screen and (max-width: 481px) {
+  .labelli {
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 400;
+    /* line-height: 27px; */
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+  }
 }
 
 @media only screen and (min-width: 1100px) {
@@ -2659,14 +2668,16 @@ li {
   position: relative;
 }
 
-.input-container input {
-  width: 190px;
-  background-color: rgba(255, 179, 66, 1);
-  outline: none;
-  font-size: 11px;
-  background-color: transparent;
-  color: #333;
-  height: 34px;
+@media only screen and (max-width: 481px) {
+  .input-container input {
+    width: 190px;
+    background-color: rgba(255, 179, 66, 1);
+    outline: none;
+    font-size: 11px;
+    background-color: transparent;
+    color: #333;
+    height: 33px;
+  }
 }
 
 @media only screen and (min-width: 1100px) {
@@ -2679,6 +2690,7 @@ li {
     color: #333;
   }
 }
+
 
 .input-container label {
   position: absolute;
