--- a/css/style.css
+++ b/css/style.css
@@ -2720,35 +2720,78 @@ li {
 
 
 /* footer-section */
-
-.footer-section {
-  padding: 20px 45px;
-  height: 450px;
-  background-color: rgba(28, 39, 82, 1);
+@media only screen and (max-width: 481px) {
+  .footer-section {
+    padding: 20px 15px;
+    height: 450px;
+    background-color: rgba(28, 39, 82, 1);
+  }
 }
 
-.footer-logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media only screen and (min-width: 1100px) {
+  .footer-section {
+    padding: 20px 45px;
+    height: 450px;
+    background-color: rgba(28, 39, 82, 1);
+  }
 }
 
-.logo-box {
-  margin-top: 60px;
-  margin-right: 40px;
+@media only screen and (max-width: 481px) {
+  .footer-logo {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.address-footer {
-  display: flex;
-  margin-left: 20px;
-  align-items: center;
-  margin-top: 40px;
-  cursor: pointer;
+@media only screen and (min-width: 1100px) {
+  .footer-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .logo-box {
+    margin-left: 2px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .logo-box {
+    margin-top: 60px;
+    margin-right: 40px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .address-footer {
+    display: flex;
+    /* margin-left: 20px; */
+    align-items: center;
+    cursor: pointer;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .address-footer {
+    display: flex;
+    margin-left: 20px;
+    align-items: center;
+    margin-top: 40px;
+    cursor: pointer;
+  }
 }
 
 
 .logo-adress-footer {
   display: flex;
+}
+
+@media only screen and (min-width: 1100px) {
+  .logo-adress-footer {
+    display: flex;
+  }
 }
 
 .logo-lokation-footer {
@@ -2768,35 +2811,136 @@ li {
   /* Увеличение в 1.2 раза при наведении */
 }
 
+
+
 .parg-adres-footer,
 .location-info {
   font-family: 'Mulish';
-  font-size: 20px;
+  font-size: 9.5px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 14px;
   letter-spacing: 0.36000001430511475px;
   text-align: left;
   color: rgba(255, 255, 255, 1);
+}
+
+@media only screen and (min-width: 1100px) {
+
+  .parg-adres-footer,
+  .location-info {
+    font-family: 'Mulish';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+  }
 }
 
 .email-cont-footer,
 .tell-cont-footer,
 .location-cont-footer {
   font-family: 'Inter';
-  font-size: 17px;
+  font-size: 8px;
   font-weight: 400;
-  line-height: 27px;
   letter-spacing: 0.36000001430511475px;
   text-align: left;
   color: rgba(255, 255, 255, 1);
   text-decoration: none;
 }
 
-.emaill-footer,
-.teell-footer,
-.location-marker {
-  margin-left: 15px;
+@media only screen and (min-width: 1100px) {
+
+  .email-cont-footer,
+  .tell-cont-footer,
+  .location-cont-footer {
+    font-family: 'Inter';
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+  }
 }
+
+
+@media only screen and (max-width: 481px) {
+  .logo-email-footer {
+    width: 23px;
+    height: 23px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .logo-email-footer {
+    width: 68px;
+    height: 68px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .logo-tell-footer {
+    width: 23px;
+    height: 23px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .logo-tell-footer {
+    width: 68px;
+    height: 68px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .logo-lokation-footer {
+    width: 23px;
+    height: 23px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .logo-lokation-footer {
+    width: 68px;
+    height: 68px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+
+  .emaill-footer,
+  .teell-footer,
+  .location-marker {
+    margin-left: 6px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+
+  .emaill-footer,
+  .teell-footer,
+  .location-marker {
+    margin-left: 15px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .logo-foto-box {
+    width: 100px;
+    height: 20px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .logo-foto-box {
+    width: 242px;
+    height: 48px;
+  }
+}
+
 
 .linia-footer {
   background: rgba(75, 85, 125, 1);
@@ -2804,40 +2948,106 @@ li {
   margin-top: 5px;
 }
 
-.footer-iconka {
-  width: 400px;
-  margin-top: 50px;
+@media only screen and (max-width: 481px) {
+  .footer-iconka {
+    /* width: 400px; */
+    margin-top: 15px;
+    display: flex;
+  }
 }
 
-
-.paragraf-footer-iconka {
-  font-family: 'Inter';
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: left;
-  color: rgba(255, 255, 255, 1);
-
+@media only screen and (min-width: 1100px) {
+  .footer-iconka {
+    width: 400px;
+    margin-top: 50px;
+  }
 }
 
-.icons-iconka {
-  display: flex;
-  gap: 15px;
-  margin-top: 40px;
+@media only screen and (max-width: 481px) {
+  .paragraf-footer-iconka {
+    font-family: 'Inter';
+    font-size: 8px;
+    font-weight: 400;
+    line-height: 13px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+    width: 200px;
+  }
 }
 
-.icon-ftr {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  width: 60px;
-  height: 60px;
-  border-radius: 100px;
-  background: rgba(44, 55, 101, 1);
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+@media only screen and (min-width: 1100px) {
+  .paragraf-footer-iconka {
+    font-family: 'Inter';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(255, 255, 255, 1);
+
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .icons-iconka {
+    display: flex;
+    gap: 10px;
+    margin-left: 10px;
+    margin-top: 15px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .icons-iconka {
+    display: flex;
+    gap: 15px;
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .iconka-iconka {
+    width: 9px;
+    height: 8px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .iconka-iconka {
+    width: 20px;
+    height: 19px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .icon-ftr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    width: 20px;
+    height: 20px;
+    border-radius: 100px;
+    background: rgba(44, 55, 101, 1);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .icon-ftr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    width: 60px;
+    height: 60px;
+    border-radius: 100px;
+    background: rgba(44, 55, 101, 1);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
 }
 
 .icon-ftr:hover {
@@ -2845,24 +3055,48 @@ li {
 
 }
 
-
-.vertical-line {
-  border-left: 1px solid#4b557d;
-  height: 160px;
+@media only screen and (max-width: 481px) {
+  .vertical-line {
+    border-left: 1px solid#4b557d;
+    /* height: 160px;
   margin: 0 15px;
-  margin-top: 160px;
+  margin-top: 160px; */
+  }
 }
 
-.vertical-liner {
-  border-left: 1px solid#4b557d;
-  height: 160px;
+@media only screen and (min-width: 1100px) {
+  .vertical-line {
+    border-left: 1px solid#4b557d;
+    height: 160px;
+    margin: 0 15px;
+    margin-top: 160px;
+  }
+}
+
+@media only screen and (max-width: 481px) {
+  .vertical-liner {
+    border-left: 1px solid#4b557d;
+    /* height: 160px;
   margin: 0 70px;
-  margin-top: 160px;
+  margin-top: 160px; */
 
+  }
 }
 
-.change-footer {
-  display: flex;
+@media only screen and (min-width: 1100px) {
+  .vertical-liner {
+    border-left: 1px solid#4b557d;
+    height: 160px;
+    margin: 0 70px;
+    margin-top: 160px;
+
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .change-footer {
+    display: flex;
+  }
 }
 
 .footer-word-text {
