--- a/css/style.css
+++ b/css/style.css
@@ -2723,7 +2723,7 @@ li {
 @media only screen and (max-width: 481px) {
   .footer-section {
     padding: 20px 15px;
-    height: 450px;
+    height: 330px;
     background-color: rgba(28, 39, 82, 1);
   }
 }
@@ -3058,9 +3058,10 @@ li {
 @media only screen and (max-width: 481px) {
   .vertical-line {
     border-left: 1px solid#4b557d;
-    /* height: 160px;
-  margin: 0 15px;
-  margin-top: 160px; */
+    height: 90px;
+    margin: 0 98px;
+    margin-top: 75px;
+    margin-bottom: -177px;
   }
 }
 
@@ -3076,9 +3077,9 @@ li {
 @media only screen and (max-width: 481px) {
   .vertical-liner {
     border-left: 1px solid#4b557d;
-    /* height: 160px;
-  margin: 0 70px;
-  margin-top: 160px; */
+    height: 92px;
+    margin: 0 195px;
+    margin-top: -63px;
 
   }
 }
@@ -3099,34 +3100,68 @@ li {
   }
 }
 
-.footer-word-text {
-  display: flex;
-  margin-left: 40px;
-  gap: 90px;
+@media only screen and (max-width: 481px) {
+  .footer-word-text {
+    display: flex;
+    gap: 25px;
+    margin-top: 15px;
+    margin-left: 10px;
+  }
+}
 
-  justify-content: center;
-  margin-top: 30px;
+@media only screen and (min-width: 1100px) {
+  .footer-word-text {
+    display: flex;
+    margin-left: 40px;
+    gap: 90px;
+    justify-content: center;
+    margin-top: 30px;
+  }
 }
 
 .parg-foter {
   font-family: 'Mulish';
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 28px;
   letter-spacing: 0.36000001430511475px;
   text-align: left;
   color: #ffb342;
   margin-bottom: 7px;
 }
 
+@media only screen and (min-width: 1100px) {
+  .parg-foter {
+    font-family: 'Mulish';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #ffb342;
+    margin-bottom: 7px;
+  }
+}
+
 .footer-word {
   font-family: 'Inter';
-  font-size: 17px;
+  font-size: 10px;
   font-weight: 400;
-  line-height: 27px;
+  line-height: 14px;
   letter-spacing: 0.36000001430511475px;
   text-align: left;
   color: #ffffff;
+}
+
+@media only screen and (min-width: 1100px) {
+  .footer-word {
+    font-family: 'Inter';
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #ffffff;
+  }
 }
 
 .column-footer {
@@ -3135,15 +3170,40 @@ li {
   gap: 5px;
 }
 
+@media only screen and (min-width: 1100px) {
+  .column-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+}
+
 .varew {
   display: flex;
-  justify-content: center;
-  margin-top: 30px;
+  justify-content: flex-end;
+  margin-top: -162px;
+  margin-right: 20px;
+  margin-bottom: 25px;
+}
+
+@media only screen and (min-width: 1100px) {
+  .varew {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+  }
 }
 
 .liniar-footer {
-
   background: rgba(75, 85, 125, 1);
   height: 1px;
-  margin-top: -50px;
+  margin-top: -15px;
+}
+
+@media only screen and (min-width: 1100px) {
+  .liniar-footer {
+    background: rgba(75, 85, 125, 1);
+    height: 1px;
+    margin-top: -50px;
+  }
 }
