--- a/css/style.css
+++ b/css/style.css
@@ -3208,7 +3208,6 @@ li {
 }
 
 
-
 .modal {
   display: none;
   position: fixed;
@@ -3219,22 +3218,68 @@ li {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.7);
+
 }
+
+
 
 .modal-content {
-  background-color: #d4d6ce;
+  background: rgba(232, 193, 38, 0.9);
+  background: linear-gradient(90deg, rgb(231, 231, 44) 6%, rgb(86, 85, 184) 50%, rgb(222, 194, 84) 100%);
+  /* Белый полупрозрачный фон */
+  animation: fadeIn 0.5s ease-out;
   margin: 15% auto;
-  padding: 20px;
+  padding: 10px;
   border: 1px solid #888;
-  width: 40%;
-  height: 60%;
+  width: 70%;
+  height: 70%;
 }
 
+@media only screen and (min-width: 1100px) {
+  .modal-content {
+    background: rgba(232, 193, 38, 0.9);
+    background: linear-gradient(90deg, rgb(231, 231, 44) 6%, rgb(86, 85, 184) 50%, rgb(222, 194, 84) 100%);
+    /* Белый полупрозрачный фон */
+    animation: fadeIn 0.5s ease-out;
+    margin: 15% auto;
+    padding: 10px;
+    border: 1px solid #888;
+    width: 70%;
+    height: 65%;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+
+  }
+}
+
+
 .close {
-  color: #aaa;
+  color: #070707;
   float: right;
-  font-size: 28px;
+  font-size: 27px;
   font-weight: bold;
+}
+
+
+@media only screen and (min-width: 1100px) {
+  .close {
+    color: #070707;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+  }
 }
 
 .close:hover,
@@ -3242,4 +3287,606 @@ li {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+
+.btn-oplata {
+  width: 95px;
+  height: 35px;
+  color: #070707;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 11px;
+  font-weight: 600;
+  margin-left: 73px;
+
+}
+
+@media only screen and (min-width: 420px) {
+  .btn-oplata {
+    width: 95px;
+    height: 35px;
+    color: #070707;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 11px;
+    font-weight: 600;
+    margin-left: 90px;
+
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .btn-oplata {
+    width: 150px;
+    height: 50px;
+    color: #070707;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 17px;
+    font-weight: 600;
+    margin-left: 550px;
+
+  }
+}
+
+
+.containerin-ler {
+  padding-top: 5px;
+}
+
+@media only screen and (min-width: 1100px) {
+  .containerin-ler {
+    padding-top: 20px;
+  }
+}
+
+.payment-title {
+  width: 100%;
+  text-align: center;
+}
+
+@media only screen and (min-width: 1100px) {
+  .payment-title {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.form-container .field-container:first-of-type {
+  grid-area: name;
+}
+
+.form-container .field-container:nth-of-type(2) {
+  grid-area: number;
+}
+
+.form-container .field-container:nth-of-type(3) {
+  grid-area: expiration;
+}
+
+.form-container .field-container:nth-of-type(4) {
+  grid-area: security;
+}
+
+.field-container input {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.field-container {
+  position: relative;
+}
+
+.oplata {
+  margin-left: 120px;
+  font-size: 23px;
+  font-weight: 400;
+  font-family: 'Times New Roman', serif;
+}
+
+@media only screen and (min-width: 1100px) {
+  .oplata {
+    margin-left: 120px;
+    font-size: 23px;
+    font-weight: 400;
+    font-family: 'Times New Roman', serif;
+  }
+}
+
+
+.form-container {
+  display: grid;
+  grid-column-gap: 10px;
+  grid-template-columns: auto auto;
+  grid-template-rows: 53px 53px 60px;
+  grid-template-areas: "name name" "number number" "expiration security";
+  max-width: 400px;
+  color: #707070;
+  padding-top: 115px;
+}
+
+@media only screen and (min-width: 420px) {
+  .form-container {
+    display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: auto auto;
+    grid-template-rows: 53px 53px 60px;
+    grid-template-areas: "name name" "number number" "expiration security";
+    max-width: 400px;
+    color: #707070;
+    padding-top: 128px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .form-container {
+    display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: auto auto;
+    grid-template-rows: 90px 90px 90px;
+    grid-template-areas: "name name" "number number" "expiration security";
+    max-width: 400px;
+    color: #707070;
+    padding-top: 1px;
+    padding-left: 440px;
+  }
+}
+
+.field-container label {
+  padding-bottom: 5px;
+  font-size: 10px;
+  color: #070707;
+}
+
+@media only screen and (min-width: 1100px) {
+  .field-container label {
+    padding-bottom: 5px;
+    font-size: 15px;
+    color: #070707;
+  }
+}
+
+.field-container input {
+  margin-top: 3px;
+  padding: 9px;
+  font-size: 8px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #dcdcdc;
+}
+
+@media only screen and (min-width: 1100px) {
+  .field-container input {
+    margin-top: 3px;
+    padding: 15px;
+    font-size: 16px;
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid #dcdcdc;
+  }
+}
+
+.ccicon {
+  height: 50px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 17px);
+  width: 35px;
+}
+
+@media only screen and (min-width: 1100px) {
+  .ccicon {
+    height: 38px;
+    position: absolute;
+    right: 6px;
+    top: calc(50% - 17px);
+    width: 60px;
+  }
+}
+
+/* CREDIT CARD IMAGE STYLING */
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
+.container-ler {
+  width: 100%;
+  max-width: 400px;
+  max-height: 251px;
+  height: 54vw;
+  padding: 20px;
+}
+
+@media only screen and (min-width: 1100px) {
+  .container-ler {
+    width: 100%;
+    max-width: 400px;
+    max-height: 251px;
+    height: 54vw;
+    padding: 20px;
+  }
+}
+
+#ccsingle {
+  position: absolute;
+  right: -5px;
+  top: 6px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #ccsingle {
+    position: absolute;
+    right: 15px;
+    top: 20px;
+  }
+}
+
+#ccsingle svg {
+  width: 100px;
+  max-height: 32px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #ccsingle svg {
+    width: 100px;
+    max-height: 60px;
+  }
+}
+
+.creditcard svg#cardfront,
+.creditcard svg#cardback {
+  width: 100%;
+  -webkit-box-shadow: 1px 5px 6px 0px black;
+  box-shadow: 1px 5px 6px 0px black;
+  border-radius: 22px;
+}
+
+@media only screen and (min-width: 1100px) {
+
+  .creditcard svg#cardfront,
+  .creditcard svg#cardback {
+    width: 100%;
+    -webkit-box-shadow: 1px 5px 6px 0px black;
+    box-shadow: 1px 5px 6px 0px black;
+    border-radius: 22px;
+  }
+}
+
+#generatecard {
+  cursor: pointer;
+  float: right;
+  font-size: 9px;
+  color: #fff;
+  padding: 2px 4px;
+  background-color: #909090;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+@media only screen and (min-width: 1100px) {
+  #generatecard {
+    cursor: pointer;
+    float: right;
+    font-size: 12px;
+    color: #fff;
+    padding: 2px 4px;
+    background-color: #909090;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+  }
+}
+
+/* CHANGEABLE CARD ELEMENTS */
+.creditcard .lightcolor,
+.creditcard .darkcolor {
+  -webkit-transition: fill .5s;
+  transition: fill .5s;
+}
+
+.creditcard .lightblue {
+  fill: #03A9F4;
+}
+
+.creditcard .lightbluedark {
+  fill: #0288D1;
+}
+
+.creditcard .red {
+  fill: #ef5350;
+}
+
+.creditcard .reddark {
+  fill: #d32f2f;
+}
+
+.creditcard .purple {
+  fill: #ab47bc;
+}
+
+.creditcard .purpledark {
+  fill: #7b1fa2;
+}
+
+.creditcard .cyan {
+  fill: #26c6da;
+}
+
+.creditcard .cyandark {
+  fill: #0097a7;
+}
+
+.creditcard .green {
+  fill: #66bb6a;
+}
+
+.creditcard .greendark {
+  fill: #388e3c;
+}
+
+.creditcard .lime {
+  fill: #d4e157;
+}
+
+.creditcard .limedark {
+  fill: #afb42b;
+}
+
+.creditcard .yellow {
+  fill: #ffeb3b;
+}
+
+.creditcard .yellowdark {
+  fill: #f9a825;
+}
+
+.creditcard .orange {
+  fill: #ff9800;
+}
+
+.creditcard .orangedark {
+  fill: #ef6c00;
+}
+
+.creditcard .grey {
+  fill: #bdbdbd;
+}
+
+.creditcard .greydark {
+  fill: #616161;
+}
+
+/* FRONT OF CARD */
+#svgname {
+  text-transform: uppercase;
+}
+
+#cardfront .st2 {
+  fill: #FFFFFF;
+}
+
+#cardfront .st3 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
+}
+
+#cardfront .st4 {
+  font-size: 54.7817px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #cardfront .st4 {
+    font-size: 54.7817px;
+  }
+}
+
+#cardfront .st5 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+}
+
+#cardfront .st6 {
+  font-size: 33.1112px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #cardfront .st6 {
+    font-size: 33.1112px;
+  }
+}
+
+#cardfront .st7 {
+  opacity: 0.6;
+  fill: #FFFFFF;
+}
+
+#cardfront .st8 {
+  font-size: 24px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #cardfront .st8 {
+    font-size: 24px;
+  }
+}
+
+#cardfront .st9 {
+  font-size: 36.5498px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #cardfront .st9 {
+    font-size: 36.5498px;
+  }
+}
+
+#cardfront .st10 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 300;
+}
+
+#cardfront .st11 {
+  font-size: 13px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #cardfront .st11 {
+    font-size: 13px;
+  }
+}
+
+#cardfront .st12 {
+  fill: #4C4C4C;
+}
+
+/* BACK OF CARD */
+#cardback .st0 {
+  fill: none;
+  stroke: #0F0F0F;
+  stroke-miterlimit: 10;
+}
+
+#cardback .st2 {
+  fill: #111111;
+}
+
+#cardback .st3 {
+  fill: #F2F2F2;
+}
+
+#cardback .st4 {
+  fill: #D8D2DB;
+}
+
+#cardback .st5 {
+  fill: #C4C4C4;
+}
+
+#cardback .st6 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+}
+
+
+#cardback .st7 {
+  font-size: 27px;
+}
+
+
+@media only screen and (min-width: 1100px) {
+  #cardback .st7 {
+    font-size: 27px;
+  }
+}
+
+
+#cardback .st8 {
+  opacity: 0.6;
+}
+
+#cardback .st9 {
+  fill: #FFFFFF;
+}
+
+#cardback .st10 {
+  font-size: 24px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #cardback .st10 {
+    font-size: 24px;
+  }
+}
+
+#cardback .st11 {
+  fill: #EAEAEA;
+}
+
+#cardback .st12 {
+  font-family: 'Rock Salt', cursive;
+}
+
+
+#cardback .st13 {
+  font-size: 37.769px;
+}
+
+
+@media only screen and (min-width: 1100px) {
+  #cardback .st13 {
+    font-size: 37.769px;
+  }
+}
+
+
+.creditcard {
+  width: 100%;
+  max-width: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: -webkit-transform 0.6s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 1100px) {
+  .creditcard {
+    width: 100%;
+    max-width: 400px;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    transition: -webkit-transform 0.6s;
+    -webkit-transition: -webkit-transform 0.6s;
+    transition: transform 0.6s;
+    transition: transform 0.6s, -webkit-transform 0.6s;
+    cursor: pointer;
+  }
+}
+
+.creditcard .front,
+.creditcard .back {
+  position: absolute;
+  width: 65%;
+  max-width: 400px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
+  color: #47525d;
+}
+
+@media only screen and (min-width: 1100px) {
+
+  .creditcard .front,
+  .creditcard .back {
+    position: absolute;
+    width: 100%;
+    max-width: 400px;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-font-smoothing: antialiased;
+    color: #47525d;
+  }
+}
+
+.creditcard .back {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.creditcard.flipped {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
