--- a/css/style.css
+++ b/css/style.css
@@ -3231,8 +3231,8 @@ li {
   margin: 15% auto;
   padding: 10px;
   border: 1px solid #888;
-  width: 70%;
-  height: 50%;
+  width: 265px;
+  height: 350px;
 }
 
 @media only screen and (min-width: 1100px) {
@@ -3300,8 +3300,11 @@ li {
   cursor: pointer;
   font-size: 11px;
   font-weight: 600;
-  margin-left: 73px;
 
+}
+
+.button-container {
+  text-align: center;
 }
 
 @media only screen and (min-width: 420px) {
@@ -3315,7 +3318,6 @@ li {
     cursor: pointer;
     font-size: 11px;
     font-weight: 600;
-    margin-left: 90px;
 
   }
 }
@@ -3331,7 +3333,7 @@ li {
     cursor: pointer;
     font-size: 17px;
     font-weight: 600;
-    margin-left: 550px;
+    margin-left: 405px;
 
   }
 }
